deploy/networking-and-service-examples/5-ingress/shared/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: root-np
  namespace: shared
spec:
  ports:
    - port: 80
      protocol: TCP
  type: NodePort
  selector:
    app: root
